Update E-commerce Data Analysis.ipynb

--- a/E-commerce Data Analysis.ipynb
+++ b/E-commerce Data Analysis.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "connection = mysql.connector.connect(\n",
     "user='root',\n",
-    "password='wordmaster',\n",
+    "password='root',\n",
     "host='localhost',\n",
     "database='project'\n",
     ")\n",
